test/negative/parse_missing_parens.mut
# Negative: missing parentheses on function definition
def foo -> i64
    return 42
end
